<resources>
    <string name="nombre">Nombres</string>
    <string name="masculino">Maculino</string>
    <string name="femenino">Femenino</string>
    <string name="apellido">Apellidos</string>
    <string name="sexo">Sexo</string>
    <string name="telefono">*Teléfono</string>
    <string name="direccion">Dirección </string>
    <string name="correo">*Correo</string>
    <string name="pais">*País</string>
    <string name="estado">*Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="home">Inicio</string>
    <string name="registro">Registro</string>
    <string name="configuracion">Configuración</string>
    <string name="errortel">Por favor ingrese su teléfono</string>
    <string name="errorcorreo">Por favor ingrese su correo</string>
    <string name="errorpais">Por favor ingrese su pais</string>
    <string name="errornombres">Por favor ingrese su nombre</string>
    <string name="errorapellidos">Por favor ingrese sus apellidos</string>
    <string name="errorfnacimiento">Por favor ingrese su fecha de nacimiento</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="grado_escolaridad">Grado de escolaridad</string>
    <string name="informacionpersonal">Informacion Personal!!</string>
    <string name="nacio">Nacio el</string>
    <string-array name="grados_escolares">
        <item>None</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universidad</item>
        <item>Otro</item>
    </string-array>
    <string name="app_name">Labs20231-Gr01</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_contact_data">ContactDataActivity</string>
</resources>