<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDataActivity" >

    <EditText
        android:id="@+id/telefono_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="text|number"
        android:imeOptions="actionSearch"
        android:hint="@string/telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/direccion_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/correo_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="180dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pais_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="264dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="actionNext"
        android:imeActionLabel="Siguiente"
        />

    <EditText
        android:id="@+id/ciudad_edittext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="360dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ciudad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="actionNext"
        />

    <Button
        android:id="@+id/siguiente1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/teal_200"
        android:layout_marginBottom="16dp"
        android:text="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>